<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:scrollbars="none"
    tools:context=".HomeActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_game"
        style="@style/Widget.MaterialComponents.Button.ParthaSaarthe"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/game_settings_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/new_game"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="40sp"
        app:cornerRadius="@dimen/button_corner_radius"
        app:elevation="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_game"
        style="@style/Widget.MaterialComponents.Button.ParthaSaarthe"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/new_game"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/continue_game_top_margin"
        android:text="@string/continue_game"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="40sp"
        app:cornerRadius="@dimen/button_corner_radius"
        app:elevation="5dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/animation_height"
        android:layout_below="@id/continue_game"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/meditate_animation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/explore_game"
        style="@style/Widget.MaterialComponents.Button.ParthaSaarthe"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/animation_view"
        android:layout_centerHorizontal="true"
        android:text="@string/explore"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:translationY="-35dp"
        app:cornerRadius="@dimen/button_corner_radius"
        app:elevation="5dp" />

    <include
        android:id="@+id/main_score"
        layout="@layout/score_info"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp" />

    <CheckBox
        android:id="@+id/game_settings_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:button="@drawable/ic_settings"
        android:elevation="5dp"
        app:buttonTint="@android:color/white" />
</RelativeLayout>