<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        tools:context=".SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_gradient">

                <include
                    layout="@layout/score_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/meditate" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.15"
                        android:src="@drawable/ic_brightness_medium" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:gravity="center_vertical"
                        android:text="@string/dark_mode"
                        android:textSize="20sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/dark_mode_switch"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".35"
                        android:thumb="@drawable/thumb"
                        app:thumbTint="@color/colorPrimary"
                        app:track="@drawable/track" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.15"
                        android:src="@drawable/ic_music_note" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:gravity="center_vertical"
                        android:text="@string/music"
                        android:textSize="20sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/music_switch"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".35"
                        android:thumb="@drawable/thumb"
                        app:thumbTint="@color/colorPrimary"
                        app:track="@drawable/track" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.15"
                        android:src="@drawable/ic_surround_sound" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:gravity="center_vertical"
                        android:text="@string/sound_effect"
                        android:textSize="20sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sound_switch"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".35"
                        android:thumb="@drawable/thumb"
                        app:thumbTint="@color/colorPrimary"
                        app:track="@drawable/track" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="70dp"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.15"
                        android:src="@drawable/ic_language" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center_vertical"
                        android:text="Language"
                        android:textSize="20sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:hint="@string/select_language"
                        android:orientation="horizontal"
                        android:textColorHint="@color/white">

                        <AutoCompleteTextView
                            android:id="@+id/filled_exposed_dropdown"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:focusable="false"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_back_button"
        android:layout_width="@dimen/small_button_width"
        android:layout_height="@dimen/small_button_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/back"
        android:textAlignment="center"
        android:textSize="@dimen/small_button_text_size"
        app:cornerRadius="@dimen/small_button_corner_radius"
        app:elevation="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_credit_button"
        android:layout_width="@dimen/small_button_width"
        android:layout_height="@dimen/small_button_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/credit"
        android:textAlignment="center"
        android:textSize="@dimen/small_button_text_size"
        app:cornerRadius="@dimen/small_button_corner_radius"
        app:elevation="5dp" />
</RelativeLayout>